tests/machine/x/fortran/slice.f90
program main
  implicit none
  print *, (/1,2,3/)((1)+1:3)
  print *, (/1,2,3/)(1:2)
  print *, "hello"((1)+1:4)
end program main
